--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <section class="logo-container">
             <h2 class="logo">LOGO</h2>
         </section>
+
         <!-- nav-pages -->
         <section class="pages-container">
             <article class="pages">
@@ -31,15 +32,43 @@
             </article>
         </section>
 
-
         <!-- nav-Icon -->
         <div class="bar-container">
             <div class="bar one"></div>
             <div class="bar two"></div>
             <div class="bar three"></div>
         </div>
-       
     </nav>
+
+      <!-- pages for smaller screen -->
+      <section class="sm-pages-container">
+        <header class="sm-header">
+            <h2 class="logo">LOGO</h2>
+
+            <!-- close nav -->
+            <div class="bar-container">
+                <div class="bar sm-one"></div>
+                <div class="bar sm-three"></div>
+            </div>
+        </header>
+        <section class="">
+            <article class="sm-pages pages">
+                <a href="#">Page</a>
+            </article>
+
+            <article class="sm-pages pages">
+                <a href="#">Page</a>
+            </article>
+
+            <article class="sm-pages pages">
+                <a href="#">Page</a>
+            </article>
+
+            <article class="sm-pages pages">
+                <a href="#">Page</a>
+            </article>
+        </section>
+    </section>
 
     <!-- main about content -->
 
