video player added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </ul>
         </section>
         <hr>
-        <section>
+        <section style="margin-top: 10px;">
             <a href="#" class="auth-btn">Login</a>
             <button class="search-btn">Search</button>
         </section>
@@ -137,11 +137,11 @@
                         </div>
 
                         <div>
-                            <img src="https://images.pexels.com/photos/8471799/pexels-photo-8471799.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="slide-image" height="100%" width="100%" data-src="./images/chemistry.mp4" data-index="2"/>
+                            <img src="https://images.pexels.com/photos/8471799/pexels-photo-8471799.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="slide-image" height="100%" width="100%" data-src="https://player.vimeo.com/external/567212252.sd.mp4?s=e240c718f92533fc4bf2a4115eed6cd943c3019b&profile_id=164&oauth2_token_id=57447761" data-index="2"/>
                         </div>
 
                         <div>
-                            <img src="https://images.pexels.com/photos/3992949/pexels-photo-3992949.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="slide-image" height="100%" width="100%" data-src="./images/football2.mp4" data-index="3"/>
+                            <img src="https://images.pexels.com/photos/5905926/pexels-photo-5905926.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="slide-image" height="100%" width="100%" data-src="https://player.vimeo.com/external/451873088.sd.mp4?s=a27f7aaff1fba616c27674a454a3b3b6946b446b&profile_id=164&oauth2_token_id=57447761" data-index="3"/>
                         </div>
 
                         <div class="slider-btn">
@@ -156,7 +156,9 @@
                         <section class="video-container">
                            
                         </section>
-                        <button class="close-video">close</button>
+                        <button class="close-video">
+                            <img src="./images/close.png" alt="">
+                        </button>
                     </article>
 
                    
